Change entity to resource, update swagger, some readme
