# api/tag.go
@@ -10,12 +10,12 @@ import (
 
 func (s *server) GetTags(c echo.Context) error {
 	ctx := c.Request().Context()
-	relationID := c.Param("relationID")
+	resourceID := c.Param("resourceID")
 	if relationID == "" {
 		return echo.NewHTTPError(http.StatusBadRequest, "Bad Relation ID")
 	}
 
-	tags, err := s.tagSvc.GetTags(ctx, &pb.GetTagsRequest{RelationID: relationID})
+	tags, err := s.tagSvc.GetTags(ctx, &pb.GetTagsRequest{ResourceID: resourceID})
 	if err != nil {
 		return echo.NewHTTPError(http.StatusInternalServerError, errors.Wrap(err, "Failed to get tags").Error())
 	}
@@ -39,16 +39,16 @@ func (s *server) CreateTags(c echo.Context) error {
 	return c.JSON(http.StatusOK, &tags)
 }
 
-func (s *server) GetEntitiesByTagName(c echo.Context) error {
+func (s *server) GetResourcesByTagName(c echo.Context) error {
 	ctx := c.Request().Context()
 	name := c.Param("name")
 	if name == "" {
 		return echo.NewHTTPError(http.StatusBadRequest, "Bad Name in request")
 	}
-	entities, err := s.tagSvc.GetEntitiesByTagName(ctx, &pb.GetEntitiesByTagNameRequest{Name: name})
+	resources, err := s.tagSvc.GetResourcesByTagName(ctx, &pb.GetResourcesByTagNameRequest{Name: name})
 	if err != nil {
 		return echo.NewHTTPError(http.StatusInternalServerError, errors.Wrap(err, "Failed to get entities").Error())
 	}
-	log.WithField("count", len(entities.GetResults())).Debug("succesfully retrieved entities")
-	return c.JSON(http.StatusOK, &entities)
+	log.WithField("count", len(resources.GetResults())).Debug("succesfully retrieved resources")
+	return c.JSON(http.StatusOK, &resources)
 }
